@@ -14,7 +14,7 @@ Synopsis
 .. include:: ../../common_SYN_OPTs.rst_
 
 **mgd77convert** *NGDC-ids* **-Fa**\ \|\ **c**\ \|\ **m** \|\ **t**
-**-T**\ [**+**\ ]\ **a**\ \|\ **c**\ \|\ **m** \|\ **t**
+**-T**\ [**+**\ ]\ **a**\ \|\ **c**\ \|\ **m**\ \|\ **t**
 [ **-C** ]
 [ **-D** ]
 [ **-L**\ [**w**][**e**][**+**] ]
